# pytest-thread

./: LICENSE.txt  README.md  pyproject.toml
src/pytest_thread/: plugins.py
