[tool.poetry]
name = "pytest-thread"
version = "0.0.1"
description = "pytest customed plugins - multiple threading only"
authors = ["Ben.He"]
maintainers = ["Ben.He <bensir213@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
]
[tool.poetry.plugins."pytest11"]
"pytest-thread" = "pytest_thread.plugins"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]
